fix: handle table overflow in weekly card for small mobile screens

--- a/src/style.css
+++ b/src/style.css
@@ -202,6 +202,10 @@ main {
   background-color: var(--weekly-bg-color);
 }
 
+#table-container {
+  overflow-x: auto;
+}
+
 footer {
   background-color: var(--header-bg-color);
   color: white;
